# adaptive_lang_study_bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
development/code_sandbox/: exp_01_basic_query.py  exp_02_system_prompt.py  exp_03_query_vs_client.py  exp_04_builtin_tools.py  exp_05_session_resume.py  exp_06_data_persistence.py  exp_07_context_management.py  exp_08_thinking_modes.py  exp_09_custom_tools.py  exp_10_hooks.py  exp_11_personalization.py  exp_12_proactive_pattern.py  exp_13_e2e_lifecycle.py  exp_14_smooth_conversations.py  exp_15_tavily_python.py  exp_15b_tavily_remote_mcp.py  exp_15c_tavily_extract.py  exp_16_inspect_input.py  shared.py
development/docs/: adaptive_personalization_design.md  experiment_observations.md  proactive_behavior_design.md  proactive_engine_review.md  user_paths.md
src/adaptive_lang_study_bot/: config.py  enums.py  i18n.py  logging_config.py  metrics.py  utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_atomic_operations.py  test_cascade_and_constraints.py  test_concurrent_operations.py  test_exercise_notification_repos.py  test_fsrs_integration.py  test_learning_plan_repo.py  test_notification_dispatch.py  test_post_session_pipeline.py  test_redis_cache.py  test_redis_lock.py  test_repo_analytics.py  test_schedule_advanced.py  test_schedule_repo.py  test_session_repo.py  test_user_repo.py  test_vocabulary_repo.py
tests/llm/: conftest.py  test_adaptive_behavior.py  test_learning_plan.py  test_multi_turn.py  test_security_boundaries.py  (+5 more)
(+98 files in other folders)
