[project]
name = "adaptive-lang-study-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergei Bratchikov",email = "hivaze.me@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "python-dateutil (>=2.9.0,<3.0.0)",
    "fsrs (>=4.0.0,<5.0.0)",
    "gradio (>=6.6.0,<7.0.0)",
    "anthropic (>=0.83.0,<0.84.0)",
    "openai (>=2.21.0,<3.0.0)",
    "langfuse (>=3.14.4,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sentry-sdk (>=2.53.0,<3.0.0)",
    "opentelemetry-api (>=1.39.1,<2.0.0)",
    "opentelemetry-sdk (>=1.39.1,<2.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "claude-agent-sdk (>=0.1.39,<0.2.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy[asyncio] (>=2.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "redis[hiredis] (>=7.2.0,<8.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "tavily-python (>=0.5.0,<1.0.0)"
]

[tool.poetry]
packages = [{include = "adaptive_lang_study_bot", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
testcontainers = "^4.14.1"
pytest-rerunfailures = "^16.1"
pytest-timeout = "^2.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
